--- a/Bootstrap Practice File/index.html
+++ b/Bootstrap Practice File/index.html
@@ -1,56 +1,96 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&family=Staatliches&display=swap" rel="stylesheet">
     <title>Hello, world!</title>
   </head>
   <body>
-
     <section id="hero-section">
-        <!-- Navbar section start here -->
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid mb-5">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-          <!-- Navbar section ends here -->
-
-          <div class="row">
-              <div class="col-lg-6 mx-auto section-heading text-center text-center text-md-start">
-                <h1 class="text-center text-md-start p-md-2 p-4">Meet The Best Robots With AI From This Era.</h1>
-                <button type="button" class="btn btn-primary my-5 mx-3"><i class="fab fa-google-play btn-icon"></i>Download</button>
-                <button type="button" class="btn btn-outline-secondary"><i class="fab fa-app-store-ios btn-icon"></i>Download</button>
-              </div>
-              <div class="col-lg-6 mx-auto">
-                  <img src="img/robot.jpg" alt="Robot picture">
-            </div>
+      <!-- Navbar section start here -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid mb-5">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link disabled"
+                  href="#"
+                  tabindex="-1"
+                  aria-disabled="true"
+                  >Disabled</a
+                >
+              </li>
+            </ul>
           </div>
+        </div>
+      </nav>
+      <!-- Navbar section ends here -->
+
+      <div class="row">
+        <div
+          class="
+            col-lg-6
+            mx-auto
+            section-heading
+            text-center text-center text-md-start
+          "
+        >
+          <h1 class="text-center text-md-start p-md-2 p-4">
+            Meet The Best Robots With AI From This Era.
+          </h1>
+          <button type="button" class="btn btn-primary my-5 mx-3">
+            <i class="fab fa-google-play btn-icon"></i>Download
+          </button>
+          <button type="button" class="btn btn-outline-secondary">
+            <i class="fab fa-app-store-ios btn-icon"></i>Download
+          </button>
+        </div>
+        <div class="col-lg-6 mx-auto">
+          <img src="img/robot.jpg" alt="Robot picture" />
+        </div>
+      </div>
     </section>
 
     <!-- Hero section ends here -->
@@ -58,28 +98,97 @@
     <!-- Service section starts here -->
 
     <section id="feature-section">
-        <div class="container">
-            <div class="row d-md-flex justify-content-center align-items-center">
-                <div class="col-lg-4 col-md-4 ">
-                    <i class="fas fa-dumbbell fa-5x icon"></i>
-                    <h1>Strength</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates fugiat nihil quasi tempora molestias iste dolore nesciunt neque tempore doloribus.</p>
-                </div>
-                <div class="col-lg-4 col-md-4 ">
-                    <i class="fas fa-search-dollar fa-5x icon"></i>
-                    <h1>Faith</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates fugiat nihil quasi tempora molestias iste dolore nesciunt neque tempore doloribus.</p>
-                </div>
-                <div class="col-lg-4 col-md-4 ">
-                    <i class="fas fa-shield-alt fa-5x icon"></i>
-                    <h1>Security</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates fugiat nihil quasi tempora molestias iste dolore nesciunt neque tempore doloribus.</p>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row d-md-flex justify-content-center align-items-center">
+          <div class="col-lg-4 col-md-4">
+            <i class="fas fa-dumbbell fa-5x icon"></i>
+            <h1>Strength</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptates fugiat nihil quasi tempora molestias iste dolore
+              nesciunt neque tempore doloribus.
+            </p>
+          </div>
+          <div class="col-lg-4 col-md-4">
+            <i class="fas fa-search-dollar fa-5x icon"></i>
+            <h1>Faith</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptates fugiat nihil quasi tempora molestias iste dolore
+              nesciunt neque tempore doloribus.
+            </p>
+          </div>
+          <div class="col-lg-4 col-md-4">
+            <i class="fas fa-shield-alt fa-5x icon"></i>
+            <h1>Security</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptates fugiat nihil quasi tempora molestias iste dolore
+              nesciunt neque tempore doloribus.
+            </p>
+          </div>
         </div>
+      </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-   
+    <!-- Feature section ends here -->
+
+    <!-- Carousel section starts here -->
+
+    <section id="carousel">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active text-center">
+            <h1>I got the best experience by using their product.</h1>
+            <img src="img/user1.jpg" class="carousel-image rounded" alt="user1">
+            <p>James Bond</p>
+          </div>
+          <div class="carousel-item">
+            <h1>If you want to get the security for you and your.</h1>
+            <img src="img/user2.jpg" class="carousel-image rounded" alt="user1">
+            <p>Jennifer Garner</p>
+          </div>
+          <div class="carousel-item">
+            <h1>If you want to get the security for you and your.</h1>
+            <img src="img/user3.jpg" class="carousel-image rounded" alt="user1">
+            <p>Elon Musk</p>
+          </div>
+          
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+  
+    </section>
+    
+    <!-- Carousel section ends here -->
+
+    <!-- Company logo section starts here -->
+
+    <section id="logo-section">
+      <h1 class="text-center">Our Respected Clients</h1>
+      <div>
+
+        <img src="img/comp1.png" alt="logo1">
+        <img src="img/comp2.png" alt="logo2">
+        <img src="img/comp3.png" alt="logo3">
+        <img src="img/comp4.png" alt="logo4">
+
+      </div>
+    </section>
+
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
