--- a/Bootstrap Practice File/index.html
+++ b/Bootstrap Practice File/index.html
@@ -74,7 +74,7 @@
             col-lg-6
             mx-auto
             section-heading
-            text-center text-center text-md-start
+            text-center text-md-start
           "
         >
           <h1 class="text-center text-md-start p-md-2 p-4">
@@ -183,6 +183,27 @@
 
       </div>
     </section>
+
+    <!-- Company logo section ends here -->
+
+    <!-- Social media section starts here -->
+
+    <section id="social-icons">
+      <h1>Interested? Stay In Touch With Us.</h1>
+      <i class="fab fa-facebook-square fa-3x"></i>
+      <i class="fab fa-twitter-square fa-3x"></i>
+      <i class="fab fa-instagram-square fa-3x"></i>
+      <i class="fab fa-linkedin fa-3x"></i>
+
+    </section>  
+    
+    <!-- Social media section ends here -->
+
+    <!-- Footer section starts here -->
+
+    <p id="footer-section">&copy; Munim Tajwar 2021</p>
+
+    <!-- Footer section ends here -->
 
 
     <script
